# tdx_mcp

./: .gitmodules  .mcp.json  README.md  mcpServer.py  pyproject.toml
.github/workflows/: publish.yml
