[project]
name = "tdx-mcp"
version = "0.2.3"
description = "TDX stock data client with MCP server for AI assistants (Claude, Cursor, OpenClaw)"
authors = [{ name = "LisonEvf", email = "lisonevf@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["stock", "tdx", "mcp", "quant", "finance", "claude", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
    "numpy",
    "mcp[cli]",
]

[project.scripts]
tdx-mcp = "mcpServer:main"

[project.urls]
Homepage = "https://github.com/LisonEvf/tdx_mcp"
Repository = "https://github.com/LisonEvf/tdx_mcp.git"
Issues = "https://github.com/LisonEvf/tdx_mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcpServer"]
license-files = []
packages = [
    "opentdx",
    "opentdx.client",
    "opentdx.commands",
    "opentdx.enums",
    "opentdx.parser",
    "opentdx.parser.ex_quotation",
    "opentdx.parser.mac_quotation",
    "opentdx.parser.quotation",
    "opentdx.utils",
]

[tool.setuptools.package-dir]
"opentdx" = "opentdx/opentdx"
